--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -112,44 +112,24 @@ echo $this->doctype() ?>
                        
                        <ul class="nav ">  	
                          </li>
-                        
-                       	<?php 
-			           /* if($profil == 'admin' || $profil == 'csm')
-			            { */
-			            ?>
+         
 			             <li class="divider-vertical"></li>
                        	 	<li class="dropdown">
                           		 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Proposition<b class="caret"></b></a>
                       
 			                  		 <ul class="dropdown-menu">
 				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'creer'), 'default', true) ?>">Créer</a></li>
-				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
-				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>                         
+				                       <li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficher'), 'default', true) ?>">Afficher</a></li>
 			                   		</ul>
 			                 </li>
-			            <?php 
-			           //  }
-			             ?>
 			              <li class="divider-vertical"></li>
                           <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Congés<b class="caret"></b></a>
                            <ul class="dropdown-menu">
-                     <?php     
-           
-				               if($profil == 'admin')
-				              {
-                       ?>
+        
                              <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'creer'), 'default', true) ?>">Créer</a></li> 
-                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'afficher'), 'default', true) ?>">Afficher / Modifier</a></li>    
-                      <?php 
-				              }
-				              else 
-				              {
-				       ?>  
-                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'afficher'), 'default', true) ?>">Afficher</a></li>
-                      <?php     
-				              }     
-                      ?>
+                             <li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'afficher'), 'default', true) ?>">Afficher</a></li>    
+       
                            
                            </ul>
                          </li>
