--- a/application/views/scripts/conge/creer.phtml
+++ b/application/views/scripts/conge/creer.phtml
@@ -12,16 +12,19 @@
 	  ?> 
 	   
  
-	<div class="row-fluid offset1">
+    <div class="row-fluid offset1">
 		<div id="header-container">
             
 			<div class="dropdown">
                   <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                  Conge
+                  	cong&eacute; <b class="caret"></b>
                   </a>
-
+					<ul class="dropdown-menu">
+						<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'creer'), 'default', true) ?>">Cr&eacute;er</a></li>
+						<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'afficher'), 'default', true) ?>">Afficher</a></li>
+					</ul>
+              
 			</div><!--MBA : fermeture dropdown -->
-          
 		</div><!-- MBA : fermeture div="header-container" -->
 	</div><!-- MBA : fermeture div="row-fluid -->
          <br/>
