--- a/public/content/css/bootmetro.css
+++ b/public/content/css/bootmetro.css
@@ -1789,6 +1789,7 @@ NavBar
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
+   margin-left: 27px;   /* adaptation de la barre " .navbar-inner " à " .well row-fluid" */
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
