MBA - Squellette calendrier annuel

--- a/application/views/scripts/calendrier/index.phtml
+++ b/application/views/scripts/calendrier/index.phtml
@@ -20,9 +20,7 @@
 
 		echo $this->jQuery(); 
 	  ?> 
- <style >
 
- </style>
 	<div class="row-fluid offset1">
 		<div id="header-container">
             
@@ -284,7 +282,7 @@
 	            <br>
 	            
 	            <div class="row-fluid pagination-centered">
-	             <button type="button" id="Filtrer" class="large">Filtrer</button>
+	             <button type="button" id="Filtrer" class="">Filtrer</button>
 	             </div>
 	      
 			             
