--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -51,7 +51,7 @@
 
 	<div class="container">
 		<div class="well row-fluid">
-					
+					<div id="msgstate">
 	<?php
 	/*
 	 * Si erreurs de traitements* renvoyï¿½ depuis le controlleur 
@@ -70,7 +70,7 @@
 			</div>
 
 	<?php } ?>
-
+</div>
 	<?php
 	
 	/*
@@ -284,7 +284,8 @@
 	            <br>
 	            
 	            <div class="row-fluid pagination-centered">
-	             <button type="button" id="Filtrer" class="large">Filtrer</button>
+	             <button type="button" id="Filtrer" class="">Filtrer</button>
+	              
 	             </div>
 	      
 			             
