--- a/application/views/scripts/calendrier/annuel.phtml
+++ b/application/views/scripts/calendrier/annuel.phtml
@@ -25,7 +25,7 @@
             
 			<div class="dropdown">
                   <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                  Calendrier Mensuel :
+                  Calendrier Annuel :
                   </a>
 
 			</div><!--MBA : fermeture dropdown -->
@@ -59,7 +59,7 @@
 	{ 
 	?>
 	
-      <!-- afficage alerte avec message d'erreur -->
+      <!-- affichage alerte avec message d'erreur -->
 			<div class="alert alert-error">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Erreur :</strong>  <?php //Message d'erreur
@@ -77,7 +77,7 @@
 	if(isset($this->warning)){ 
 	?>
 	
-      <!-- afficage alerte avec message d'erreur -->
+      <!-- affichage alerte avec message d'erreur -->
 			<div class="alert">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Alerte :</strong>  <?php //Message warning
@@ -96,14 +96,21 @@
 	{
 	?>
 	
-	<!-- afficage message succÃ©s  -->
+	<!-- afficage message succés  -->
             <div class="alert alert-success">
 				<button type="button" class="close " data-dismiss="alert"></button>
 				<strong>Succes :</strong> <?php //Message succes
-	                                      echo "succÃ©s :".$this->success ;?>
+	                                      echo "succés :".$this->success ;?>
 			</div>
 			<div class="row">
 			 
 	<?php } ?>
-			<div id="wrapper"></div>
+	<div class="">
+	<div class="row-fluid span3">
+			<?php echo $this->form; ?></div>
 	        </div>
+			<div class="span9 row-fluid well" id="wrapper" height="706"></div>
+			
+	        </div>
+	       </div>
+	       </div>
