--- a/application/layouts/scripts/mylayout.phtml
+++ b/application/layouts/scripts/mylayout.phtml
@@ -153,8 +153,9 @@ echo $this->doctype() ?>
                          <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Calendrier<b class="caret"></b></a>
                            <ul class="dropdown-menu">
-                             <li><a href="<?php echo $this->url(array('controller' => 'calendrier', 'action' => 'index'), 'default', true) ?>">Calendrier mensuel</a></li>
-                             <li><a href="#">Calendrier annuel</a></li>
+                            <li><a href="<?php echo $this->url(array('controller' => 'calendrier', 'action' => 'index'), 'default', true) ?>">Calendrier mensuel</a></li>
+                             <li><a href="<?php echo $this->url(array('controller' => 'calendrier', 'action' => 'annuel'), 'default', true) ?>">Calendrier annuel</a></li>
+                             
                              
                            </ul>
                          </li>
