--- a/application/views/scripts/proposition/creer.phtml
+++ b/application/views/scripts/proposition/creer.phtml
@@ -36,8 +36,8 @@
             anneeCourante = date.getFullYear();
 
 
-            from = iMoisCourantForPHP+'-'+ anneeCourante;
-            to = iMoisCourantForPHP+'-'+anneeCourante;
+            from = '9-2012';
+            to = '11-2012';
 
             idPersonne = jQuery('#Ressource option:selected').val();
            
@@ -49,9 +49,9 @@
             data = getCalendarContent(idPersonne,periode);
             
              periode = {
-                    "Year": anneeCourante,
-                    	"From": iMoisCourant,
-                    		"To": iMoisCourant
+                   
+                    	"From": 9,
+                    		"To": 9
                 };
             
 
